package src.main;

import java.util.List;

public class Usuario {
    List<Guardarropas> guardarropas;
}
