@startuml
class Prenda {
	private Tipo tipo;
	private Color colorPrimario;
	private Color colorSecundario;
	private Material material;
	private Trama trama;

	public boolean esAdecuadoParaTemperatura(short temperatura)

	public boolean esDeCategoria(Categoria categoria)
}

class Guardarropas {
    List<Prenda> prendas;
    String criterio;
    List<Propuesta> propuestasPendientes;
    List<Propuesta> propuestasAceptadas;

    public void atenderPropuesta(Propuesta unaPropuesta)
    public void aceptarPropuesta(Propuesta unaPropuesta)
    public void deshacerPropuesta(Propuesta unaPropuesta)
    public void recibirPropuesta(Propuesta unaPropuesta)
    public void agregarPrenda(Prenda prenda)
}


abstract class Propuesta {
    Prenda prenda;

    public abstract void aplicarseSobrePrendas(List<Prenda> prendas);
    public abstract Propuesta propuestaInversa();
}

class PropuestaAgregar extends Propuesta{

    public void aplicarseSobrePrendas(List<Prenda> prendas)

    public Propuesta propuestaInversa()
}

class PropuestaQuitar extends Propuesta{

    public void aplicarseSobrePrendas(List<Prenda> prendas)

    public Propuesta propuestaInversa()
}

class Usuario {
    List<Guardarropas> guardarropas;
}


Usuario -->"*" Guardarropas
Guardarropas -->"*" Prenda
Guardarropas -->"*" Propuesta
@enduml
